@@ -1,3 +1,10 @@
+2014-07-09  Edward Smith-Rowland  <3dw4rd@verizon.net>
+
+	PR c++/58155 - -Wliteral-suffix warns about tokens which are skipped
+	by preprocessor
+	* lex.c (lex_raw_string ()): Do not warn about invalid suffix
+	if skipping. (lex_string ()): Ditto.
+
 2014-04-22  Release Manager
 
 	* GCC 4.9.0 released.
